clusters/KC-Int/deployments/media/radarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:5.1.3
          resources:
            limits:
              memory: 4Gi
              cpu: 2000m
            requests:
              memory: 100Mi
              cpu: 100m
          volumeMounts:
            - name: pvc
              mountPath: /config
            - name: media
              mountPath: /PlexMedia
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: radarr
        - name: media
          nfs:
            server: 172.16.1.10
            path: /mnt/BigPool/Media
